// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentsFlatCli resyncAll() should persist payments flat collection: Snapshot resyncAll 1`] = `
Array [
  Object {
    "_id": Any<ObjectId>,
    "action": "libelle_action_1",
    "activite": "libelle_activite_1",
    "codeAction": "0143-03-01",
    "codeActivite": "014303000102",
    "dateOperation": 2023-04-21T00:00:00.000Z,
    "ej": "EJ_egale",
    "exerciceBudgetaire": 2023,
    "idVersement": "123456789012-EJ_egale-2023",
    "ministere": "nom_ministere_1",
    "mission": "mission_1",
    "montant": 152587.1,
    "numeroProgramme": 143,
    "programme": "programme_1",
    "provider": "chorus",
    "sigleMinistere": "sigle_ministere_1",
    "siren": "123456789",
    "siret": "123456789012",
    "uniqueId": "123456789012-EJ_egale-2023-143-0143-03-01-014303000102-1682035200000",
  },
  Object {
    "_id": Any<ObjectId>,
    "action": null,
    "activite": null,
    "codeAction": "0101-01-02",
    "codeActivite": "3222",
    "dateOperation": 2023-07-12T00:00:00.000Z,
    "ej": "0001821732",
    "exerciceBudgetaire": 2022,
    "idVersement": "123456789013-0001821732-2022",
    "ministere": null,
    "mission": null,
    "montant": 89988.3,
    "numeroProgramme": 101,
    "programme": null,
    "provider": "chorus",
    "sigleMinistere": null,
    "siren": "123456789",
    "siret": "123456789013",
    "uniqueId": "123456789013-0001821732-2022-101-0101-01-02-3222-1689120000000",
  },
  Object {
    "_id": Any<ObjectId>,
    "action": null,
    "activite": null,
    "codeAction": "0102-03",
    "codeActivite": "3222",
    "dateOperation": 2023-05-05T00:00:00.000Z,
    "ej": "0003823760",
    "exerciceBudgetaire": 2023,
    "idVersement": "123456789014-0003823760-2023",
    "ministere": null,
    "mission": null,
    "montant": 62655.2,
    "numeroProgramme": 102,
    "programme": null,
    "provider": "chorus",
    "sigleMinistere": null,
    "siren": "123456789",
    "siret": "123456789014",
    "uniqueId": "123456789014-0003823760-2023-102-0102-03-3222-1683244800000",
  },
]
`;

exports[`PaymentsFlatCli resyncExercice() should persist payments flat collection for the given exercice: Snapshot resyncExercice 1`] = `
Array [
  Object {
    "_id": Any<ObjectId>,
    "action": "libelle_action_1",
    "activite": "libelle_activite_1",
    "codeAction": "0143-03-01",
    "codeActivite": "014303000102",
    "dateOperation": 2023-04-21T00:00:00.000Z,
    "ej": "EJ_egale",
    "exerciceBudgetaire": 2023,
    "idVersement": "123456789012-EJ_egale-2023",
    "ministere": "nom_ministere_1",
    "mission": "mission_1",
    "montant": 152587.1,
    "numeroProgramme": 143,
    "programme": "programme_1",
    "provider": "chorus",
    "sigleMinistere": "sigle_ministere_1",
    "siren": "123456789",
    "siret": "123456789012",
    "uniqueId": "123456789012-EJ_egale-2023-143-0143-03-01-014303000102-1682035200000",
  },
  Object {
    "_id": Any<ObjectId>,
    "action": null,
    "activite": null,
    "codeAction": "0102-03",
    "codeActivite": "3222",
    "dateOperation": 2023-05-05T00:00:00.000Z,
    "ej": "0003823760",
    "exerciceBudgetaire": 2023,
    "idVersement": "123456789014-0003823760-2023",
    "ministere": null,
    "mission": null,
    "montant": 62655.2,
    "numeroProgramme": 102,
    "programme": null,
    "provider": "chorus",
    "sigleMinistere": null,
    "siren": "123456789",
    "siret": "123456789014",
    "uniqueId": "123456789014-0003823760-2023-102-0102-03-3222-1683244800000",
  },
]
`;
